// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateInput should render correctly 1`] = `
<div
  className="react-datepicker-wrapper"
>
  <div
    className="react-datepicker__input-container"
  >
    <div
      className="Input TextInput block with-icon"
      id={null}
    >
      
      <input
        autoComplete="off"
        className="TextInput__input"
        disabled={false}
        max={null}
        maxLength={null}
        min={null}
        name="date-input-unit-test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        placeholder=""
        type="text"
        value="08.02.2019"
      />
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-calendar-alt fa-w-14 "
        data-icon="calendar-alt"
        data-prefix="far"
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M400 64h-48V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H160V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V112c0-26.5-21.5-48-48-48zm0 96v80h-96v-80h96zM176 352v-80h96v80h-96zm96 32v80h-96v-80h96zm-128-32H48v-80h96v80zm32-112v-80h96v80h-96zm128 32h96v80h-96v-80zM144 160v80H48v-80h96zM48 458v-74h96v80H54c-3.3 0-6-2.7-6-6zm346 6h-90v-80h96v74c0 3.3-2.7 6-6 6z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      
    </div>
  </div>
</div>
`;

exports[`DateInput should render correctly with a Label 1`] = `
<div
  className="react-datepicker-wrapper"
>
  <div
    className="react-datepicker__input-container"
  >
    <div
      className="Input TextInput block with-icon"
      id={null}
    >
      <label
        className="InputLabel"
        htmlFor={null}
        id={null}
      >
        Testing Label
      </label>
      <input
        autoComplete="off"
        className="TextInput__input"
        disabled={false}
        max={null}
        maxLength={null}
        min={null}
        name="date-input-unit-test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        placeholder=""
        type="text"
        value="08.02.2019"
      />
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-calendar-alt fa-w-14 "
        data-icon="calendar-alt"
        data-prefix="far"
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M400 64h-48V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H160V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V112c0-26.5-21.5-48-48-48zm0 96v80h-96v-80h96zM176 352v-80h96v80h-96zm96 32v80h-96v-80h96zm-128-32H48v-80h96v80zm32-112v-80h96v80h-96zm128 32h96v80h-96v-80zM144 160v80H48v-80h96zM48 458v-74h96v80H54c-3.3 0-6-2.7-6-6zm346 6h-90v-80h96v74c0 3.3-2.7 6-6 6z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      
    </div>
  </div>
</div>
`;

exports[`DateInput should render correctly with an InputError 1`] = `
<div
  className="react-datepicker-wrapper"
>
  <div
    className="react-datepicker__input-container"
  >
    <div
      className="Input TextInput block has-error with-icon"
      id={null}
    >
      
      <input
        autoComplete="off"
        className="TextInput__input"
        disabled={false}
        max={null}
        maxLength={null}
        min={null}
        name="date-input-unit-test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        placeholder=""
        type="text"
        value="08.02.2019"
      />
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-calendar-alt fa-w-14 "
        data-icon="calendar-alt"
        data-prefix="far"
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M400 64h-48V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H160V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V112c0-26.5-21.5-48-48-48zm0 96v80h-96v-80h96zM176 352v-80h96v80h-96zm96 32v80h-96v-80h96zm-128-32H48v-80h96v80zm32-112v-80h96v80h-96zm128 32h96v80h-96v-80zM144 160v80H48v-80h96zM48 458v-74h96v80H54c-3.3 0-6-2.7-6-6zm346 6h-90v-80h96v74c0 3.3-2.7 6-6 6z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <span
        className="InputError"
      >
        Testing InputError Message
      </span>
    </div>
  </div>
</div>
`;
